--- a/progettoiseo/pagine_statiche/templates/direttivo.html
+++ b/progettoiseo/pagine_statiche/templates/direttivo.html
@@ -1,7 +1,10 @@
 {% extends "layouts/base.html" %} {% block title %} progettoiseo-direttivo {% endblock %}
 
 {% block content %}
-<h1 class="text-center mb-4">Il Direttivo</h1>
+<div class="container mt-4">
+    <div class="row mb-4">
+        <h1 class="text-center mb-4">Il Direttivo</h1>
+    </div>
 
 <div class="container">
     <div class="row justify-content-center">
@@ -54,3 +57,4 @@
     {% endif %}
 </div>
 {% endblock %}
+</div>
