Nomi-cognomi autori, form eventi, pulsanti coerenti

--- a/progettoiseo/articoli/templates/article_detail.html
+++ b/progettoiseo/articoli/templates/article_detail.html
@@ -32,7 +32,7 @@
                                 <i class="fas fa-users text-muted me-2"></i>
                                 <strong>Autori:</strong>
                                 {% for autore in article.autori.all %}
-                                    {{ autore }}{% if not forloop.last %}, {% endif %}
+                                    {{ autore.user.get_full_name|default:autore.user.username }}{% if not forloop.last %}, {% endif %}
                                 {% endfor %}
                             </p>
                         {% endif %}
