--- a/progettoiseo/eventi/templates/dettaglio_evento.html
+++ b/progettoiseo/eventi/templates/dettaglio_evento.html
@@ -38,7 +38,7 @@
                         </p>
                         <p class="mb-1">
                             <i class="fas fa-user text-muted me-2"></i>
-                            <strong>Organizzatore:</strong> {{ event.organizzatore }}
+                            <strong>Organizzatore:</strong> {{ event.organizzatore.user.get_full_name|default:event.organizzatore.user.username }}
                         </p>
                         <p class="mb-1">
                             <i class="fas fa-info-circle text-muted me-2"></i>
